--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "laravel/ui": "^3.3",
+        "nesbot/carbon": "^2.53",
         "ramsey/uuid": "^4.2",
         "yajra/laravel-datatables-oracle": "~9.0"
     },
